<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <LinearLayout
        android:id="@+id/image_container"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:background="@color/andelaThemeColor"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/me"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:text="@string/profile_name_msg"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_container">

        <TextView
            android:id="@+id/text_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/track_android"
            android:textAlignment="center"
            android:textAppearance="@style/profileItem" />

        <TextView
            android:id="@+id/text_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_country"
            android:textAlignment="center"
            android:textAppearance="@style/profileItem" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_email"
            android:textAlignment="center"
            android:textAppearance="@style/profileItem" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_phone"
            android:textAlignment="center"
            android:textAppearance="@style/profileItem" />

        <TextView
            android:id="@+id/text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_username"
            android:textAlignment="center"
            android:textAppearance="@style/profileItem" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>